--- a/geral.css
+++ b/geral.css
@@ -1,1 +1,13 @@
+.calculadora{
+    background: rgb(236, 119, 236);
+    width: 190px;
+    padding: 10px;
+    border-radius: 10px;
+}
+.calculadora input {
+    background: rgb(17, 17, 16);
+    color: rgb(245, 239, 245);
+    padding: 5px;
+    border-radius: 5px;
+}
 
