--- a/geral.css
+++ b/geral.css
@@ -1,44 +1,48 @@
 .calculadora{
-    background: rgb(8, 181, 187);
+    background: rgb(8, 187, 23);
     width: 200px;
     padding: 10px;
     border-radius: 25px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 6px 6px rgb(217, 231, 22);
 }
 .calculadora input {
-    background: rgb(187, 82, 173);
+    background: rgb(217, 231, 22);
+    color: rgb(2, 2, 2);
+}
+.calculadora input:focus {
+    background: rgb(146, 146, 141);
     color: rgb(2, 2, 2);
 }
 #spTotal {
     background: black;
-    color: rgb(223, 223, 222);
+    color: yellow;
     padding: 3px;
     border-radius: 10px;
 }
 .calculadora button {
     background:rgb(0, 0, 0);
-    color: rgb(203, 204, 170);
+    color: rgb(251, 255, 0);
     padding: 8px;
     border-radius: 8px;
     margin-top: 10px;
 }
 .calculadora button:hover{
-    background: rgb(247, 112, 247);
-    color: rgb(2, 66, 63);
+    background: rgb(255, 255, 255);
+    color: red;
     cursor: pointer;
 }
-
-.calcF {
+.calcF  {
     display: none;
 }
 #input-calcF{
     display: none;
 }
-
-h5 {
-    color: rgb(0, 0, 0);
+h3{
+    color: aliceblue;
 }
-
-#input-calcF:checked + .calculadora .calcF {
+#input-calcF:checked + .calculadora  .calcF{
     display: block;
 }
